--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+  font-family: 'Inter', BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
     "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -24,11 +24,6 @@ ul {
 
 li{
   list-style: none;
-}
-
-a {
-  text-decoration: none;
-  color: inherit; /* Ensure the link inherits the color of the parent */
 }
 
 
